--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "form": "^0.2.4",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "radix": "^0.0.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
